# SutraLang

./: .gitignore  LICENSE  README.md  pyproject.toml
Docs/: ABOUT.md  DOCUMENTATION.md  FUTURE_PLANS.md
examples/: devanagari_example.skt  greeting_example.skt  math_example.skt  random_example.skt  time_example.skt
sutralang/: mappings.py  repl.py  sanskrit.py
घटकः/: गणित.skt  नियोग_देवनागरीलिपौ_सञ्चिका.skt  यादृच्छिक.skt  समय.skt
